<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Your Notes Here:"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etBranch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:hint="@string/enter_branch"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etSubjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        android:hint="@string/enter_subject_name"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        android:hint="@string/enter_year"
        android:inputType="number"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/green"
        android:padding="15dp"
        android:text="@string/select_notes_file"
        android:textColor="@color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/red"
        android:text="@string/upload" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:visibility="gone" />
</LinearLayout>