<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dull_white"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:src="@drawable/app_icon"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/txtMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_below="@+id/loginLogo"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/txtMSG1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_conitnue"
        android:layout_below="@+id/txtMSG"
        android:textColor="#616161"
        android:textStyle="normal"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        android:hint="@string/email_address"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtMSG1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:lines="1"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dull_white"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextColor="@color/black"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/emailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:lines="1"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/passContainer"
        android:text="Sign-In"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="28dp"
        android:background="@color/green"
        android:layout_marginStart="28dp"/>

    <Button
        android:id="@+id/googleLoginButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/btnLogin"
        android:backgroundTint="@color/grey"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:text="@string/sign_in_using_google"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/facebookLoginButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/googleLoginButton"
        android:backgroundTint="@color/grey"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textAllCaps="false"
        android:text="@string/sign_in_using_facebook"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/githubLoginButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/facebookLoginButton"
        android:backgroundTint="@color/grey"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textAllCaps="false"
        android:text="@string/sign_in_using_github"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true"/>
</RelativeLayout>