<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dull_white"
    tools:context=".ui.activity.RegisterActivity">

    <ImageView
        android:id="@+id/registerLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:src="@drawable/app_icon"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/txtMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:layout_below="@+id/registerLogo"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/txtMSG1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_get_started"
        android:layout_below="@+id/txtMSG"
        android:textColor="#616161"
        android:textStyle="normal"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="17dp"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/txtMSG1"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="20dp"
        android:background="@color/grey"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:background="@color/grey"
            app:hintTextColor="@color/black"
            android:inputType="text"
            android:textColor="@color/black"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/collegeContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/nameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/collegeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:hint="@string/institution_name"
            android:lines="2"
            android:textColor="@color/black"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/courseContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_below="@id/collegeContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/courseEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_name"
            android:background="@color/grey"
            android:lines="2"
            android:textColor="@color/black"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        android:hint="@string/email_address"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/courseContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:lines="1"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dull_white"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextColor="@color/black"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/emailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:lines="1"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dull_white"
        app:counterEnabled="true"
        app:counterTextColor="@color/black"
        app:counterMaxLength="16"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/passContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:lines="1"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/confirmContainer"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:background="@color/dull_white"
        android:layout_marginStart="28dp"/>


    <TextView
        android:id="@+id/txtAgainLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="I'm already a member ! Sign-In"
        android:textColor="@color/black" />

</RelativeLayout>