<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/made_with_love_in_india"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/developers"
            android:textColor="#686868"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/about_page_border"
            android:orientation="horizontal"
            android:weightSum="11">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="4.0"
                android:src="@drawable/zakariya"
                app:civ_border_color="@color/grey"
                app:civ_border_width="1dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.0"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/txtZakariyaName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/mohd_zakariya"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtZakariyaWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/android_developer"
                    android:textColor="#686868"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtAboutZakariya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/zakariyaLinkedin"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_right_arrow" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/about_page_border"
            android:orientation="horizontal"
            android:weightSum="11">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="4.0"
                android:src="@drawable/masoom"
                app:civ_border_color="@color/grey"
                app:civ_border_width="1dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.0"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/txtMasoomName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/masoom_zaid"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMasoomWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/android_developer"
                    android:textColor="#686868"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtAboutMasoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/masoomLinkedin"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_right_arrow" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/about_page_border"
            android:orientation="horizontal"
            android:weightSum="11">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="4.0"
                android:src="@drawable/vishal"
                app:civ_border_color="@color/grey"
                app:civ_border_width="1dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.0"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/txtVishalName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/vishal_kumar"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtVishalWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/android_developer"
                    android:textColor="#686868"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtAboutVishal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/vishalLinkedin"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_right_arrow" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>